--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,4 @@ plugins:
 
 title: [The title of your site]
 description: [A short description of your site's purpose]
+url: "https://zackslay3r.github.io/"
