--- a/_config.yml
+++ b/_config.yml
@@ -4,5 +4,5 @@ plugins:
 
 
 title: [The title of your site]
-description: [A short description of your site's purpose]
-url: "https://zackslay3r.github.io/"
+description: [A short description of your sites purpose]
+
