--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 remote_theme: pages-themes/slate@v0.2.0
 
-title: "Zackary Direen - Game Programmer"
+title: Octocat's homepage
+description: Bookmark this to keep an eye on my project updates!
