Title and description.

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 remote_theme: pages-themes/slate@v0.2.0
 
-title: Octocat's homepage
-description: Bookmark this to keep an eye on my project updates!
+title: Zackary Direen
+description: A passionate game developer looking to make a break in the industry.
